# ETWParser

./: .gitignore  .gitmodules  CMakeLists.txt  ETWParser.sln  README.md
ETWParser/: App.config  ETWParser.cs  ETWParser.csproj  EventHandler.cs  EventWrapper.cs  Logger.cs  Options.cs  Symbol.cs
Tests/: run_test.bat
